--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+    jcenter()
     mavenCentral()
     maven { url 'https://repo.spring.io/libs-milestone' }
     maven { url 'https://repo.spring.io/libs-snapshot' }
