--- a/build.gradle
+++ b/build.gradle
@@ -46,14 +46,16 @@ repositories {
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'
-//    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-zookeeper-all'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
     compile group: 'org.springframework.kafka', name: 'spring-kafka'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.1.Final'
-    compile group: 'org.web3j', name: 'core', version: '3.6.0'
+    compile group: 'org.web3j', name: 'core', version: '4.0.1'
     compile group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.4.13'
+    compile group: 'org.apache.curator', name: 'curator-framework'
+    compile group: 'org.apache.curator', name: 'curator-client'
+    compile group: 'org.apache.curator', name: 'curator-recipes'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
