--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.0.RELEASE")
         classpath 'com.bmuschko:gradle-docker-plugin:4.0.4'
     }
 }
@@ -27,7 +27,7 @@ bootJar {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Greenwich.M3"
     }
 }
 
@@ -39,16 +39,16 @@ sourceCompatibility = 1.8
 repositories {
     jcenter()
     mavenCentral()
-    maven { url 'https://repo.spring.io/libs-milestone' }
+    maven { url 'https://repo.spring.io/milestone' }
     maven { url 'https://repo.spring.io/libs-snapshot' }
 }
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-stream-kafka'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-    compile group: 'org.springframework.kafka', name: 'spring-kafka'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.1.Final'
     compile group: 'org.web3j', name: 'core', version: '4.0.1'
