--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
 docker {
     springBootApplication {
-        baseImage = 'java:8-jre'
+        baseImage = 'java:8-jre-alpine'
         ports = [8080]
         tag = 'vareger/transaction-service:1.0'
     }
