--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,10 @@ spring:
         send-transaction-out:
           contentType: 'text/plain'
           destination: 'send-transaction-hash-rinkeby'
+        transaction-in-hash:
+          contentType: 'text/plain'
+          destination: 'send-transaction-hash-rinkeby'
+          group: 'transaction-service'
         transaction-broadcast:
           contentType: 'application/json'
           destination: 'ethereum.rinkeby.transaction.all'
@@ -74,6 +78,10 @@ spring:
         send-transaction-out:
           contentType: 'text/plain'
           destination: 'send-transaction-hash-rinkeby'
+        transaction-in-hash:
+          contentType: 'text/plain'
+          destination: 'send-transaction-hash-rinkeby'
+          group: 'transaction-service'
         transaction-broadcast:
           contentType: 'application/json'
           destination: 'ethereum.rinkeby.transaction.all'
